--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <a href="#contact">Contact</a>
         <a href="shop.html">Shop</a>
         <a href="#services">Services</a>
+        <a href="#services">dev</a>
       </nav>
     </div>
   </footer>
