--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="container nav-wrapper">
       <a class="brand" href="index.html">
-        <img src="images/2.jpg" alt="BML Logo" class="brand-img">
+        <img src="images/1.png" alt="BML Logo" class="brand-img">
         <span>BML WOOD MACHINERY</span>
       </a>
       <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
