--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="#contact">Contact</a>
         <a href="shop.html">Shop</a>
         <a href="#services">Services</a>
-        <a href="#services">dev</a>
+        <a href="https://isaac-easie.github.io/isax-tech-hub/index.html">dev</a>
       </nav>
     </div>
   </footer>
